--- a/client/src/components/questionItem/questionItem.css
+++ b/client/src/components/questionItem/questionItem.css
@@ -60,3 +60,14 @@
   border-radius: 100%;
   margin: 1rem 0;
 }
+
+@media screen and (max-width: 1500px) {
+  .questionitem-question {
+    font-size: 2rem;
+    margin: 2rem 0;
+  }
+
+  .questionitem-choice {
+    font-size: 1.5rem;
+  }
+}
